📁 Add development history archive
• Complete development progression from basic to ultimate
• 5 versions showing evolution through Amazon Q CLI collaboration
• snake_game.py - Original basic version
• snake_game_pro.py - Professional visual enhancement
• snake_game_ultimate.py - UI and menu system
• snake_game_audio.py - Complete audio integration
• snake_game_complete.py - Advanced features (difficulty + leaderboard)

Preserves the complete journey of AI-assisted development.

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,6 @@ parts/
 sdist/
 var/
 wheels/
-blog-posts/
-archive/
 pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
@@ -43,6 +41,7 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
 
